# statistically

./: .gitignore  CONTRIBUTING.md  README.md  notes.md  noxfile.py  requirements-test.txt  requirements.txt  setup.cfg  setup.py
.github/workflows/: python-package.yml
statistically/: __init__.py  __main__.py  lexer.py  log.py  output.py  parser.py  stat.py  statistically.py
test/: conftest.py  pylintrc  test_basic_logs.py  test_basics.py  test_examples.py  test_integration.py  test_lexer.py  test_log.py  test_log_regress.py  test_logs.py  test_stat.py  test_stuff.py
test/example_analyses/margins/: margins_str.txt
test/example_analyses/nbreg/: nbreg.txt
test/example_analyses/poisson/: poisson.txt
test/example_analyses/reg/: reg.txt  reg2.txt
test/example_analyses/summarize/: summarize.txt
test/example_analyses/tabstat/: tabstat.txt
test/example_analyses/teffects/: teffects_pscore.txt
test/example_analyses/ttest/: ttest.txt
test/example_logs/: nsf-20201013.txt  two_unrelated_tables.txt
test/examples/: full_log.txt  logistic.txt  margins.txt  margins_interaction.txt  nbreg.txt  tebalance.txt  ttest.txt
test/stata/: _all.do  basic.do  download_data.py  longer.do  stata_manual.do  various.do
test/stata/adhoc/: estat_vif_prob.txt
test/stata/basic/: estat_vif.txt  fitstat.txt  logit.txt  margins1.txt  margins4.txt  margins8.txt  nbreg.txt  nbreg_offset.txt  probit.txt  regress.txt  summarize.txt  table.txt  table_contents.txt
test/stata/full/: artificial.txt
test/stata/results/: logit.txt  margins1.txt  margins4.txt  margins8.txt  nbreg.txt  nbreg_offset.txt  probit.txt  regress.txt  summarize.txt  table.txt  table_contents.txt
test/stata/various/: longer.txt  margins_complex.txt  table_headings.txt
