[metadata]
name = statistically
version = attr: statistically.__version__
url = https://github.com/vaneseltine/statistically
author = Matt VanEseltine
author_email = matvan@umich.edu
classifiers =
    Development Status :: 1 - Planning
    Environment :: Console
    Intended Audience :: Education
    Intended Audience :: End Users/Desktop
    Intended Audience :: Financial and Insurance Industry
    Intended Audience :: Science/Research
    License :: OSI Approved :: GNU Affero General Public License v3 or later (AGPLv3+)
    Natural Language :: English
    Operating System :: OS Independent
    Programming Language :: Python
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3 :: Only
    Topic :: Office/Business
    Topic :: Scientific/Engineering
    Topic :: Scientific/Engineering :: Mathematics
    Topic :: Sociology
    Topic :: Text Processing
    Typing :: Typed
license = AGPL-3.0-or-later
license_file = LICENSE
description = An empty-featured Stata output scraper/parser.
long_description = file: README.md
long_description_content_type = text/markdown
keywords =
    analysis
    parsing
    regression
    stata
    statistical
    statistics
project_urls =
    Issue Tracker = https://github.com/vaneseltine/statistically/issues
python_requires = >=3.7

[options]
zip_safe = True

[coverage:run]
branch = True
source = statistically
omit = */__*.py

[coverage:report]
exclude_lines =
    if T.TYPE_CHECKING

[coverage:html]
directory = build/coverage

[flake8]
max-line-length = 88
max-complexity = 9
exclude =
    .git,
    .*,
    .nox,
    .venv,
    build,
    docs,
    test,
    __pycache__,
    __init__.py,
    *.pyi
ignore =
    E203,
    E501,
    E741,
    W503

[tool:isort]
profile = black

[tool:pytest]
log_cli = False
log_cli_level = DEBUG
testpaths = test
python_files = test_*.py
python_functions = t_* test_* issue*
